# PRALG

./: .gitignore
1Exo_pointeurs/exoPRALG1/Matrice/: CMakeLists.txt  CMakePresets.json  main.cpp  matrice.cpp  matrice.h
2Exo_data/: inttree.h
2Exo_data/exoPRALG2_Final/: CMakeLists.txt  inttree.cpp  inttree.h  main.cpp  tree.h
3Exo_STL/exoPRALG3_Final/: CMakeLists.txt
4Exo_arbre/exoPRALG4_Final/: CMakeLists.txt  zipimage.cpp
4Exo_arbre/exoPRALG4_Final/quadtree/: quadtree.h
4Exo_arbre/exoPRALG4_Initial/: CMakeLists.txt  zipimage.cpp
4Exo_arbre/exoPRALG4_Initial/quadtree/: CMakeLists.txt
5Exo_heritage/exoPRALG5_Final/: CMakeLists.txt  derivee.cpp  derivee.h  fonction.cpp  fonction.h  heritage.cpp  polynome.cpp  polynome.h  trigo.cpp  trigo.h
7Exo_hachage/exoPRALG7_Final/: CMakeLists.txt  example.cpp  isotopo.cpp  point2d.cpp  point2d.h  town.cpp  town.h  villes2.txt
7Exo_hachage/exoPRALG7_Initial/: CMakeLists.txt  example.cpp  isotopo.cpp  town.cpp  town.h  villes.txt
exo3PRALG/: exoSTL  exoSTL.cpp
exo3PRALG/G1/Antoine Chosson/PRALG_TP_3/: CMakeLists.txt  main.cpp  templates.cpp  templates.h
exo3PRALG/G1/Arthur Gorin/exo_stl/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G1/Arthur Ollivier/OLLIVIER_STL/: CMakeLists.txt  main.cpp
exo3PRALG/G1/Ayush Adhikari/Ayush ADHIKARI_608185_assignsubmission_file_tp3_Ayush/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G1/Camille Bernard/STL/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G1/Charles Prevoteau/TP3_PREVOTEAU_PRALG/: CMakeLists.txt  README
exo3PRALG/G1/Chloé Spittaël/Chloé SPITTAËL_608172_assignsubmission_file_SPITTAEL_Exo3_pralg/: CMakeLists.txt  Eleves.cpp  Eleves.h  main.cpp
exo3PRALG/G1/Edward Bauduin/TP_3_BAUDUIN_Edward - Copy/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G1/Eliott Delhaye/TP3-C++/: CMakeLists.txt  eleves.cpp  eleves.h  main.cpp
exo3PRALG/G1/Emilie Lé-Nhu/: Emilie LÉ-NHU_608181_assignsubmission_file_TP3_Emilie.7z
exo3PRALG/G1/Erwann Carn/Exercice_STL/: CMakeLists.txt  affichage.h  comparateur.cpp  comparateur.h  eleve.cpp  eleve.h  main.cpp  zdz
exo3PRALG/G1/Ghislain Jodon de Villeroché/Exo STL/: CMakeLists.txt  Main.cpp  eleve.cpp  eleve.h
exo3PRALG/G1/Houssam Ehmimed/TP3 Exercice STL/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G1/Jakob Haberstock/PRALG_TP3/: CMakeLists.txt
exo3PRALG/G1/Jakob Haberstock/PRALG_TP3/include/: Eleve.h
exo3PRALG/G1/Jakob Haberstock/PRALG_TP3/src/: Eleve.cpp  main.cpp
exo3PRALG/G1/Mohamed Salim Assellalou/: Mohamed Salim ASSELLALOU_608167_assignsubmission_file_TP3_Mohamed_Salim_Assellalou.7z
exo3PRALG/G1/Mohamed Salim Assellalou/TP3/: CMakeLists.txt  Eleve.h  main.cpp
exo3PRALG/G1/Paul Andreis/Exercice_STL_Paul_Andreis/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G1/Paul-Emile Marcus/TP_STL_MARCUS/: CMakeLists.txt  CompareNom.h  CompareNote.h  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G1/Ralph Saddi/Ralph SADDI_608161_assignsubmission_file_TP3/: CMakeLists.txt  eleves.h  main.cpp
exo3PRALG/G2/Adrien Gentili/TP3_adrien_gentili/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/Briac Angot/TP_STL_Briac_ANGOT/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G2/Charles de Bourgoing/exo_stl/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/Clara Lima Goldenberg/TP3_ClaraLimaGoldenberg/: CMakeLists.txt  eleves.cpp  eleves.h  main.cpp
exo3PRALG/G2/Emma Leblanc/TP3_LEBLANC_Emma/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G2/Erwann Cognet/exo3/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/Estelle Ziebelin/TP3/: CMakeLists.txt  Comparateur.h  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/Jean-Baptiste Maury/exercice_3/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G2/Jérémy Huang/Jérémy HUANG_608207_assignsubmission_file_TP3/: CMakeLists.txt
exo3PRALG/G2/Jérémy Huang/Jérémy HUANG_608207_assignsubmission_file_TP3/src/: Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/Lionel Akogbeto/TP3/: CMakeLists.txt  eleves.cpp  eleves.h  main.cpp
exo3PRALG/G2/Naïm El Ouassaïdi/Tp3/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/Omar Toufelaz/TP_3/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G2/Omar Toufelaz/TP_3/html/: annotated.html  annotated_dup.js  class_compare_nom-members.html  class_compare_nom.html  class_compare_nom.js  class_compare_note-members.html  class_compare_note.html  class_compare_note.js  class_eleve-members.html  class_eleve.html  class_eleve.js  classes.html  doxygen_crawl.html  eleve_8h_source.html  files.html  files_dup.js  functions.html  functions_func.html  navtreeindex0.js
exo3PRALG/G2/Omar Toufelaz/TP_3/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  classes_0.js  classes_1.js  functions_0.js  functions_1.js  searchdata.js
exo3PRALG/G2/Omar Toufelaz/TP_3/latex/: annotated.tex  class_compare_nom.tex  class_compare_note.tex  class_eleve.tex  eleve_8h_source.tex  files.tex  refman.tex
exo3PRALG/G2/Soufiane Sondali/Soufiane SONDALI_608196_assignsubmission_file_TP3_SONDALI_SOUFIANE/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G2/William Barthelemy/William BARTHELEMY_608204_assignsubmission_file_TP3_William_BARTHELEMY/: CMakeLists.txt  main.cpp  student.cpp  student.h
exo3PRALG/G2/Youssef Sahraoui/TP_3_eleves/: CMakeLists.txt  eleve.cpp  eleve.h  main.cpp
exo3PRALG/G3/AMitaï Berger/TP3_PRALG/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G3/Camille Viénot/TP3_PRALG_CamilleVienot/: CMakeLists.txt  Eleve.cpp  Eleve.h  README.h  main.cpp
exo3PRALG/G3/Idris Rayane Mjidi/pralg_2/: CMakeLists.txt  Eleve.cpp  Eleve.h  main.cpp
exo3PRALG/G3/Tinghan_Jia/: Tinghan_JIA_609311_assignsubmission_file_main
exo3PRALG/PRALG-Exercice sur la STL-G1-32620/stl/: CMakeLists.txt  main.cpp  stl.cpp  stl.h
exo3PRALG/PRALG-Exercice sur la STL-G2-32620/: Pierre BRESSOLLETTE_608193_assignsubmission_file_pierrebressollette_tp3
exo3PRALG/PRALG-Exercice sur la STL-G3-32620/: Tinghan JIA_609311_assignsubmission_file_main.cpp
(+164 files in other folders)
