cmake_minimum_required(VERSION 3.5)

project(OLLIVIER_STL LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(OLLIVIER_STL main.cpp)

include(GNUInstallDirs)
install(TARGETS OLLIVIER_STL
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
